Fixed some typos

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <h1>Hello,<br>
                 <span id="typed-strings">
                   <span>I'm EEx</span>
-                  <span>Self taught programer</span>
+                  <span>Self taught programmer</span>
                   <span>Music producer</span>
                 </span>
                 <span id="typed"></span>
