--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="text-content">
               <h1>Hello,<br>
                 <span id="typed-strings">
-                  <span>I'm EEx</span>
+                  <span>I'm Sage!</span>
                   <span>Self taught programmer</span>
                   <span>Music producer</span>
                 </span>
