--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>About me!</title>  
 
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 
@@ -60,13 +60,13 @@
               <div class="row">
                 <div class="col-xs-12 col-md-6">
                   <h3>About me!</h3>
-                  <p>I Was Born in 2008, Started coding 2019 <br> My names EEx, nice to meet you!</p>
+                  <p>I Was Born in 2009, Started coding 2019 <br> My names Sage, nice to meet you!</p>
                   
                 </div>
                 <div class="col-xs-12 col-md-6">
                   <h3>Some of my music!</h3>
-                  <iframe width="100%" height="200" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1094239375&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/eexlar" title="EExlar" target="_blank" style="color: #cccccc; text-decoration: none;">EExlar</a> · <a href="https://soundcloud.com/eexlar/coffee-in-the-rain" title="Coffee in the rain" target="_blank" style="color: #cccccc; text-decoration: none;">Coffee in the rain</a></div>
-                  <iframe width="100%" height="200" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1092032122&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/eexlar" title="EExlar" target="_blank" style="color: #cccccc; text-decoration: none;">EExlar</a> · <a href="https://soundcloud.com/eexlar/lofi-beat" title="Rain music" target="_blank" style="color: #cccccc; text-decoration: none;">Rain music</a></div>
+                  <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1203893380&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/prodbyra1n" title="Ra1n" target="_blank" style="color: #cccccc; text-decoration: none;">Ra1n</a> · <a href="https://soundcloud.com/prodbyra1n/flute-boi" title="Flute Boi" target="_blank" style="color: #cccccc; text-decoration: none;">Flute Boi</a></div>
+                  <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1199862205&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/prodbyra1n" title="Ra1n" target="_blank" style="color: #cccccc; text-decoration: none;">Ra1n</a> · <a href="https://soundcloud.com/prodbyra1n/l-i-f-e" title="R-e-a-l" target="_blank" style="color: #cccccc; text-decoration: none;">R-e-a-l</a></div>
                 </div>
               </div>
             </div>
